fix layout error(whitespace in right screen)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,10 +6,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  min-width: fit-content;
-}
-
 .font-lato {
   font-family: "Lato", sans-serif;
 }
